--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "mysql2": "^3.3.3",
+    "sequelize": "^6.32.0",
+    "sequelize-cli": "^6.6.0",
     "winston": "^3.9.0"
   }
 }
