Added flights model with foreign key constrainst

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base_node_js_project_template",
+  "name": "Flights",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
